--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "framesurfer"
-version = "0.1.0"
+version = "0.1.1"
 description = ""
 authors = ["Your Name <you@example.com>"]
 readme = "README.md"
@@ -10,6 +10,7 @@ python = "^3.9"
 python-dotenv = "^1.0.0"
 requests = "^2.31.0"
 samsungtvws = "^2.5.0"
+pillow = "^10.3.0"
 
 
 [build-system]
